# exit-root-of-trust-server

./: README.md
.github/: deploy.yml  rust.yml
backend/: Cargo.toml
backend/src/: main.rs
scripts/: build-and-deploy.sh  deploy.yml  hosts
scripts/roles/backend/tasks/: main.yml
scripts/roles/backend/tasks/templates/: exit-trust-root.service.j2
scripts/roles/frontend/tasks/: main.yml
