[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "exit_trust_root_server"
path = "src/main.rs"

[dependencies]
clap = {version="4", features=["derive"]}
althea_types = { git = "https://github.com/althea-net/rita.git", rev = "c265d40ebe72d8c2ee15ce90d1557bba611f7685"}
exit_trust_root = { git = "https://github.com/althea-net/rita.git", rev = "c265d40ebe72d8c2ee15ce90d1557bba611f7685"}
awc = {version = "3.5", default-features = false, features=["openssl", "compress-gzip", "compress-zstd"]}
actix-web = { version = "4.9", default-features = false, features = ["openssl", "compress-gzip", "compress-zstd", "macros"] }
openssl = {version = "0.10", features = ["vendored"]}
openssl-probe = "0.1"
env_logger = "0.11"
log = "0.4"
clarity = "1.4"
web30 = "1.4"
phonenumber = "0.3.6"
actix = "0.13"
tokio = { version = "1.40", features = ["macros", "time"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.5"
crossbeam = "0.8"
futures = "0.3"
lazy_static = "1.5"
